Add food views and update controllers

--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -16,14 +16,15 @@
 <h1><%= user.username %>'s Pantry</h1>
 
 <a href="/users/<%= user._id %>/foods/new"> Add New Item</a>
-<% if (pantry.length === 0) { %>
+<% if (user.pantry.length === 0) { %>
   <p>>There are no items in your pantry</a></p>
 <% } else { %>
   <ul>
-    <% pantry.forEach(item => { %>
+    <% user.pantry.forEach(item => { %>
       <li>
         <strong><%= item.name %></strong><% if (item.quantity != null) {%>
-        -QTY: <%= item.quantity %><% } %><%
+        -QTY: <%= item.quantity %><% } %>
+<a href="/users/<%= user._id %>/foods/<%= item._id %>/edit">Edit</a>
 
         <form action="/users/<%= user._id %>/foods/<%= item._id %>?_method=DELETE" method="POST" style="display:inline;">
           <button type="submit">Delete</button>
@@ -33,7 +34,6 @@
   </ul>
 <% } %>
 
-<a href="/users/<%= user._id %>/foods/<%= item._id %>/edit">Edit</a>
 
         </body>
         </html>
