--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,10 +1,10 @@
 <h1><%= user.username %>'s Pantry</h1>
 
-<% if (pantry.length === 0) { %>
+<% if (user.pantry.length === 0) { %>
   <p>>There are no items in your pantry</a></p>
 <% } else { %>
   <ul>
-    <% pantry.forEach(item => { %>
+    <% user.pantry.forEach(item => { %>
       <li>
         <strong><%= item.name %></strong><% if (item.quantity != null) {%>
         -QTY: <%= item.quantity %><% } %><% if (item.expirationDate != null) { %>
